Reduced logo width also for the default jspwiki.css (to prevent overlapping with title).

--- a/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/jspwiki.css
+++ b/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/jspwiki.css
@@ -360,8 +360,8 @@ img.attlink {
 } 
 .applicationlogo a {
 	display:block;
-	height:76px;
-	width:264px;
+	height:80px;
+	width:240px;
 	overflow:hidden;
 	margin-left:auto;
 	margin-right:auto;
